--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Package/Index.cshtml
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Package/Index.cshtml
@@ -14,6 +14,8 @@
         <th>Content</th>
         <th>Destination</th>
         <th>Status</th>
+        <th>Planned Delivery Date</th>
+        <th>Date Delivered</th>
         <th>Delete</th>
     </tr>
     </thead>
@@ -49,7 +51,26 @@
                         data: "destination"
                     },
                     {
-                        data: "status"
+                        data: "status"         
+                    },
+                    {
+                        data: "planedDeliveryDate",
+                        render: function (data) {
+                            if (data === null)
+                                return "not found";
+                            else
+                                return data;
+                        }
+                    },
+                    {
+                        data: "dateDelivered",
+                        render: function (data) {
+                            if (data === null)
+                                return "not found";
+                            else
+                                return data;
+                        }
+
                     },
                     {
                         data: "id",
