--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Package/Index.cshtml
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Package/Index.cshtml
@@ -54,7 +54,7 @@
                         data: "status"         
                     },
                     {
-                        data: "planedDeliveryDate",
+                        data: "plannedDeliveryDate",
                         render: function (data) {
                             if (data === null)
                                 return "not found";
