--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Delivery/Index.cshtml
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Delivery/Index.cshtml
@@ -107,7 +107,7 @@
 
         
 
-        model = @Html.Raw(Json.Encode(new List<Package>(Model.DeliveryByDriver[Model.Drivers[0].Name])));
+        @*model = @Html.Raw(Json.Encode(new List<Package>(Model.DeliveryByDriver[Model.Drivers[0].Name])));*@
 
         var center = { lat: 59.261897775, lng: 15.30572069518922 };
 
@@ -131,7 +131,6 @@
         directionsService.route({
                 origin: { lat: 59.246396, lng: 15.137283 },
                 destination: { lat: 59.246544, lng: 15.136656 },
-
                 waypoints: wayPts,
                 optimizeWaypoints: true,
                 travelMode: transportMethod
@@ -140,7 +139,8 @@
                 if (status === 'OK') {
                     directionsDisplay.setDirections(response);
                     getTotalTime(response);
-                } else {
+                }
+                else {
                     window.alert('Directions request failed due to ' + status);
                 }
             });
