--- a/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Shared/_Layout.cshtml
+++ b/Transportsystem_GoogleMaps/Transportsystem_GoogleMaps/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    @Html.Partial("_NavBar");
+    @Html.Partial("_NavBar")
     <div class="container body-content">
         @RenderBody()
         <hr />
